--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ authors = ["phildav"]
 
 [dependencies]
 glob = "0.3.2"
+rand_mt = "5.0.0"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+overflow-checks = false
 
 [lib]
 path = "src/lib.rs"
