--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,3 @@
-[package]
-name = "llm-rs"
-version = "0.1.0"
-edition = "2024"
-authors = ["phildav"]
-
-[dependencies]
-glob = "0.3.2"
-rand_mt = "5.0.0"
-
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-panic = "abort"
-overflow-checks = false
-
-[lib]
-path = "src/lib.rs"
+[workspace]
+members = ["crates/llmrs", "crates/llmrs-dev"]
+resolver = "2"
