Fix the build without cuda

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,7 @@
 [build]
 rustflags = [
-  "-C", "opt-level=3",           # Highest optimization, roughly -O3/-Ofast
+  "-C", "opt-level=3",           # Highest optimization, roughly -O3
   "-C", "target-cpu=native",     # Use all instructions for local CPU, like -march=native
+  "-C", "embed-bitcode=yes"
+
 ]
