--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,9 @@
 name: Build and test
 
 on:
-  create:
-  workflow_dispatch:
   push:
-    branches:
-      - master
+    branches: ['**']
   pull_request:
-    branches:
-      - master
 
 # Cancel previous runs for the same PR/branch
 concurrency:
